WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232514
[WTF] Minor clean-up for format-related functions
https://bugs.webkit.org/show_bug.cgi?id=232514
Summary
[WTF] Minor clean-up for format-related functions
David Kilzer (:ddkilzer)
Reported
2021-10-29 15:50:39 PDT
Minor clean-up for format-related functions.
Attachments
Patch v1
(3.28 KB, patch)
2021-10-29 15:52 PDT
,
David Kilzer (:ddkilzer)
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch v2
(2.54 KB, patch)
2021-11-02 13:36 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2021-10-29 15:52:50 PDT
Created
attachment 442876
[details]
Patch v1
David Kilzer (:ddkilzer)
Comment 2
2021-10-29 16:04:35 PDT
Comment on
attachment 442876
[details]
Patch v1 Need to compile macOS as well!
David Kilzer (:ddkilzer)
Comment 3
2021-11-02 13:36:33 PDT
Created
attachment 443129
[details]
Patch v2
David Kilzer (:ddkilzer)
Comment 4
2021-11-02 13:37:41 PDT
(In reply to David Kilzer (:ddkilzer) from
comment #3
)
> Created
attachment 443129
[details]
> Patch v2
Dropped the changes to Assertions.h since macOS has some `LOG()` calls that don't have any arguments past the `format` string.
Yusuke Suzuki
Comment 5
2021-11-02 14:46:38 PDT
Comment on
attachment 443129
[details]
Patch v2 r=me
David Kilzer (:ddkilzer)
Comment 6
2021-11-02 15:13:54 PDT
Comment on
attachment 443129
[details]
Patch v2 Marking as cq+ since this built successfully on a sufficient number of platforms.
EWS
Comment 7
2021-11-02 15:19:29 PDT
Committed
r285188
(
243817@main
): <
https://commits.webkit.org/243817@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 443129
[details]
.
Radar WebKit Bug Importer
Comment 8
2021-11-02 15:20:21 PDT
<
rdar://problem/84949628
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug