[WTF] Minor clean-up for format-related functions <https://webkit.org/b/232514>

Reviewed by Yusuke Suzuki.

* wtf/Assertions.cpp:
(WTF::createWithFormatAndArguments):
- Put WTF_ATTRIBUTE_PRINTF() on its own line to match other
  functions.
(WTF::vprintf_stderr_with_prefix):
(WTF::vprintf_stderr_with_trailing_newline):
- Move ALLOW_NONLITERAL_FORMAT_{BEGIN,END} around specific
  function calls that need them.



Canonical link: https://commits.webkit.org/243817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285188 268f45cc-cd09-0410-ab3c-d52691b4dbfc